--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&display=swap" rel="stylesheet">    
    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
         img{
           width: 100%;
         }
@@ -36,8 +37,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="#">Inicio</a>
-              <a class="nav-link" href="#">Categoria</a>
-              <a class="nav-link" href="footer">Contacto</a>
+              <a class="nav-link" href="#">Galeria</a>
+              <a class="nav-link" href="#contacto">Contacto</a>
               
             </div>
           </div>
@@ -47,7 +48,7 @@
       <br>
       <article><h2>TrinityPhoto</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
          Enim, perspiciatis? Ea ut, quae quos omnis at corporis ullam officiis eveniet inventore doloremque sint eum, ducimus sapiente voluptate est, nobis delectus. Magnam neque doloribus deserunt at accusamus porro, corporis dolor unde quam similique, culpa dolorum ex suscipit repellat numquam laboriosam veniam.</p>
-      <a href="#"><button type="button" class="btn btn-secondary btn-lg">Explorar</button></a></article>
+      <a href="#"><button type="button" class="btn btn-secondary btn-lg">Galeria</button></a></article>
 
      <br>
 
@@ -62,7 +63,7 @@
               </ul>
             </div>
             <div class="footer-col">
-              <h4>Redes</h4>
+              <h4 id="contacto">Redes</h4>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
