--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="#">Inicio</a>
-              <a class="nav-link" href="#">Galeria</a>
+              <a class="nav-link" href="https://vasossvacioss.github.io/TnityPhoto1/#">Inicio</a>
+              <a class="nav-link" href="https://vasossvacioss.github.io/NayproyecGallery/">Galeria</a>
               <a class="nav-link" href="#contacto">Contacto</a>
               
             </div>
@@ -48,7 +48,7 @@
       <br>
       <article><h2>TrinityPhoto</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
          Enim, perspiciatis? Ea ut, quae quos omnis at corporis ullam officiis eveniet inventore doloremque sint eum, ducimus sapiente voluptate est, nobis delectus. Magnam neque doloribus deserunt at accusamus porro, corporis dolor unde quam similique, culpa dolorum ex suscipit repellat numquam laboriosam veniam.</p>
-      <a href="#"><button type="button" class="btn btn-secondary btn-lg">Galeria</button></a></article>
+      <a href="https://vasossvacioss.github.io/NayproyecGallery/"><button type="button" class="btn btn-secondary btn-lg">Galeria</button></a></article>
 
      <br>
 
