--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">TrinityPhoto</a>
+          <a class="navbar-brand" href='https://postimg.cc/HJktV1cj' target='_blank'><img src='https://i.postimg.cc/HJktV1cj/trinity.png' border='0' alt='trinity'/></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -46,8 +46,18 @@
       </nav>
 
       <br>
-      <article><h2>TrinityPhoto</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-         Enim, perspiciatis? Ea ut, quae quos omnis at corporis ullam officiis eveniet inventore doloremque sint eum, ducimus sapiente voluptate est, nobis delectus. Magnam neque doloribus deserunt at accusamus porro, corporis dolor unde quam similique, culpa dolorum ex suscipit repellat numquam laboriosam veniam.</p>
+      <article><h2>TrinityPhoto</h2><p>Quienes somos? 
+        Trinity photo es una firma compuesta por la unidad de 3 fotógrafas:  Brenda Suyo, Natalia Acuña y Solana Di nuzzo.
+        
+        TRINITY se traduce al español como “Trinidad'', deriva del latín trinitas que
+        significa "tres, una tríada".
+        La unidad de tres personas formando la esencia de trinity, cada color hace hincapié
+        en cada una de nosotras. El azul representa a Natalia, el verde representa a
+        Brenda y el rojo representa a Solana. Estos colores nos van a identificar durante
+        todo el proyecto para darnos una impronta a cada una. El objetivo será que nos
+        reconozcan por estos colores. 
+        El objetivo general de la empresa es posicionarnos en el mercado de la fotografía
+        publicitaria- moda- indumentaria.</p>
       <a href="https://vasossvacioss.github.io/NayproyecGallery/"><button type="button" class="btn btn-secondary btn-lg">Galeria</button></a></article>
 
      <br>
