--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           height: 100%;
         }
       </style>
-    <title>Proyecto Nat</title>
+    <title>TrinityPhoto</title>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href='https://postimg.cc/HJktV1cj' target='_blank'><img src='https://i.postimg.cc/HJktV1cj/trinity.png' border='0' alt='trinity' height="50px"/></a>
+          <a class="navbar-brand"  target='_blank'><img src='https://i.postimg.cc/HJktV1cj/trinity.png' border='0' alt='trinity' height="50px"/></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
