--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="https://vasossvacioss.github.io/TnityPhoto1/#">Inicio</a>
-              <a class="nav-link" href="https://vasossvacioss.github.io/NayproyecGallery/">Galeria</a>
+              <a class="nav-link" href="#home">Inicio</a>
+              <a class="nav-link" href="https://trinityphoto-gallery.netlify.app/">Galeria</a>
               <a class="nav-link" href="#contacto">Contacto</a>
               
             </div>
@@ -46,7 +46,7 @@
       </nav>
 
       <br>
-      <article><h2>TrinityPhoto</h2><p>Quienes somos? 
+      <article id="home"><h2>TrinityPhoto</h2><p>Quienes somos? 
         Trinity photo es una firma compuesta por la unidad de 3 fotógrafas:  Brenda Suyo, Natalia Acuña y Solana Di nuzzo.
         
         TRINITY se traduce al español como “Trinidad'', deriva del latín trinitas que
@@ -58,7 +58,7 @@
         reconozcan por estos colores. 
         El objetivo general de la empresa es posicionarnos en el mercado de la fotografía
         publicitaria- moda- indumentaria.</p>
-      <a href="https://vasossvacioss.github.io/NayproyecGallery/"><button type="button" class="btn btn-secondary btn-lg">Galeria</button></a></article>
+      <a href="https://trinityphoto-gallery.netlify.app/"><button type="button" class="btn btn-secondary btn-lg">Galeria</button></a></article>
 
      <br>
 
@@ -68,7 +68,7 @@
             <div class="footer-col">
               <h4>TrinityPhoto</h4>
               <ul>
-                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="#home">Sobre nosotros</a></li>
                 <li><a href="#">Servicios</a></li>
               </ul>
             </div>
