--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               <a href="https://t.me/Vasossvacioss"><i class="fab fa-telegram"></i></a>
               <a href="https://www.instagram.com/vasossvacioss/"><i class="fab fa-instagram"></i></a>
               <a href="https://www.linkedin.com/in/javier-romero-arce-079770118/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://vasossvacioss.github.io/portafolio3/?fbclid=PAAabkvQZUQPZAtFc08vCVYKhP7T43JX9nySTHSp5Y3DW31771cftSN3GDIL4"><i class='fab fa-github'></i></a>
             </div>
         </div>
           
